--- a/Chatbot 1.ipynb
+++ b/Chatbot 1.ipynb
@@ -481,13 +481,7 @@
       "1/1 [==============================] - 0s 2ms/step - loss: 1.6844 - accuracy: 0.2381\n",
       "Epoch 72/500\n",
       "1/1 [==============================] - 0s 996us/step - loss: 1.6811 - accuracy: 0.2381\n",
-      "Epoch 73/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 73/500\n",
       "1/1 [==============================] - 0s 1ms/step - loss: 1.6778 - accuracy: 0.2381\n",
       "Epoch 74/500\n",
       "1/1 [==============================] - 0s 2ms/step - loss: 1.6745 - accuracy: 0.2381\n",
@@ -821,13 +815,7 @@
       "1/1 [==============================] - 0s 997us/step - loss: 0.7879 - accuracy: 0.8571\n",
       "Epoch 236/500\n",
       "1/1 [==============================] - 0s 2ms/step - loss: 0.7806 - accuracy: 0.8571\n",
-      "Epoch 237/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 237/500\n",
       "1/1 [==============================] - 0s 998us/step - loss: 0.7734 - accuracy: 0.8571\n",
       "Epoch 238/500\n",
       "1/1 [==============================] - 0s 0s/step - loss: 0.7662 - accuracy: 0.9048\n",
@@ -1160,13 +1148,7 @@
       "Epoch 399/500\n",
       "1/1 [==============================] - 0s 2ms/step - loss: 0.1500 - accuracy: 0.9524\n",
       "Epoch 400/500\n",
-      "1/1 [==============================] - 0s 2ms/step - loss: 0.1487 - accuracy: 0.9524\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 2ms/step - loss: 0.1487 - accuracy: 0.9524\n",
       "Epoch 401/500\n",
       "1/1 [==============================] - 0s 998us/step - loss: 0.1474 - accuracy: 0.9524\n",
       "Epoch 402/500\n",
@@ -1568,7 +1550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1582,7 +1564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
